# ArkanoidGame

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
arknoid/: CMakeLists.txt
arknoid/include/: BoosterSound.hpp  BrickCollection.hpp  BulletSound.hpp  EntityCollection.hpp  FontCollection.hpp  FontEntity.hpp  Logging.hpp  SoundEntity.hpp  ball.hpp  brick.hpp  brickConfig.hpp  bullet.hpp  clock.hpp  entity.hpp  game.hpp  lives.hpp  manager.hpp  operation.hpp  paddle.hpp  particlesystem.hpp  stageManager.hpp
arknoid/src/: BallSound.cpp  BoosterSound.cpp  BulletSound.cpp  ball.cpp  brick.cpp  brickConfig.cpp  bullet.cpp  game.cpp  lives.cpp  mainfile.cpp  manager.cpp  paddle.cpp  utility.cpp
common/: circle.hpp
gameloader/: GameLoader.cpp  GameLoader.hpp  MenuClass.hpp  main_file.cpp
include/: BallSound.hpp  BoosterSound.hpp  FontEntity.hpp  MenuClass.hpp  SoundEntity.hpp  ball.hpp  brick.hpp  brickConfig.hpp  bullet.hpp  clock.hpp  entity.hpp  game.hpp  lives.hpp  macros.hpp  manager.hpp  paddle.hpp  starEntity.hpp  utility.hpp
src/: BallSound.hpp  BoosterSound.hpp  EventQueue.hpp  FontEntity.cpp  FontEntity.hpp  LimitedLifetimeEntity.hpp  Logging.cpp  Logging.hpp  LoginScreen.hpp  MenuClass.cpp  MenuClass.hpp  ModeSelect.hpp  SoundEntity.cpp  SoundEntity.hpp  ball.cpp  ball.hpp  brick.cpp  brick.hpp  brickConfig.hxx  bullet.cpp  bullet.hpp  circle.hpp  clock.hpp  entity.hpp  game.cpp  game.hpp  lives.cpp  lives.hpp  macros.hpp  mainfile.cpp  manager.cpp  manager.hpp  paddle.cpp  paddle.hpp  particlesystem.cpp  particlesystem.hpp  rectangle.hpp  stageManager.hpp  starEntity.cpp  starEntity.hpp  (+2 more)
tetris/: CMakeLists.txt  TetrisLoader.cpp  TetrisLoader.h  main.cpp
